<resources>
    <string name="app_name">SurpriseMeUser</string>
    <string name="facebook_app_id">1078382892582555</string>
    <string name="fb_login_protocol_scheme">fb1078382892582555</string>
    <string name="places_api_key">AIzaSyA8xsvoYmsGtITtzvU90jkK3OHArVBAinI</string>
    <string name="google_Map_Key">AIzaSyAkWmuRRj9I9d5fyr4RqM61QDuIwOAZzvA</string>
    <string name="google_Map_Key_latest">AIzaSyDqU3uVjJ1hn71Gi98EJNEESQxuMPnbq8E</string>
    <string name="youtube_api_key">AIzaSyAB8u2xJzND_aHiLd4Q56_1c1Op4Kda9T0</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="title_text_1">Birthday Surprise</string>
    <string name="title_text_2">Dj Performers</string>
    <string name="title_text_3">Digital Performers</string>
    <string name="splash_dummy_text">Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry\'s standard dummy text ever.</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="change">Change</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="type_here">Type here…</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="yet">Don\'t have an account yet?<font color='#D4145A'><b> Sign up</b></font></string>
    <string name="status_stop"><font fgcolor='#D4145A'>Stopped</font></string>
    <string name="signup">Sign up</string>
    <string name="register_with_us">Register with us in<font color='#000000'><b> surprise</b></font><font color='#D4145A'><b>me</b></font>.</string>
    <string name="register_with_us_plain">Register with us in surpriseme.</string>
    <string name="by_signing_up_text">By signing up, you are agree with our <font color='#fd8c00'><font>Terms &amp; Conditions</font></font></string>
    <string name="are_you_new">Are you new?</string>
    <string name="signup_with_email">Signup with Email</string>
    <string name="or">Or</string>
    <string name="back_to_login">Back to login</string>
    <string name="sigup_with_facebook">Signup with Facebook</string>
    <string name="back">Back</string>
    <string name="fill_up_details">Fill up details</string>
    <string name="username">Username</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register_now">Register Now</string>
    <string name="please_fill_require_field">Please fill the require field</string>
    <string name="password_not_match">password doesn\'t match</string>
    <string name="con_Text">Continue</string>
    <string name="please_enter_valid_email">Enter valid email</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="chat">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_location">Your Location</string>
    <string name="view_profile">View Profile</string>
    <string name="profie">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="e_mail">Email</string>
    <string name="change_pass">Change Password</string>
    <string name="user1">Username1 SurpriseMe</string>
    <string name="userme">user1@me@.com</string>
    <string name="changepassword">Change Password</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="alert">Alert!</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="cancel">cancel</string>
    <string name="Cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="search_for_artist_singer">Search for Artist, Singer etc.</string>
    <string name="book_artist_you_listen">Book Artist You  Listen</string>
    <string name="singer_actor">Singer,Actor</string>
    <string name="book">Book</string>
    <string name="see_artist_profile">See Artist Profile</string>
    <string name="no_data_found">No Data Found</string>
    <string name="refresh">Refresh</string>
    <string name="location_dummy_address">Phase-7,Sas Nagar, Mohali</string>
    <string name="saved_location">Saved Location</string>
    <string name="add_address">Add Address</string>
    <string name="current_location">Current Location</string>
    <string name="select_other_location">Select Other Location</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="save_address">Save Address</string>
    <string name="house_number_flat">House Number/Flat</string>
    <string name="landmark">Landmark</string>
    <string name="bookings">Bookings</string>
    <string name="you_may_edit_booking">You may edit the booking slot, before payment process.</string>
    <string name="drake">Drake</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="booking_details">Booking Details</string>
    <string name="see_profile">See Profile</string>
    <string name="please_select_address_type">Please select address type</string>
    <string name="artist_available">Artist Available</string>
    <string name="see_review">See Reviews</string>
    <string name="booking_price">Booking Price</string>
    <string name="live_show">Live Show</string>
    <string name="per_hour">Per Hour</string>
    <string name="_20_999">299</string>
    <string name="digital_price">Digital Price</string>
    <string name="digital_show">Digital Show</string>
    <string name="gallery">Gallery</string>
    <string name="social_media_handles">Social Media handles</string>
    <string name="media">Media</string>
    <string name="chat_demo_text">Have a chat about your...................</string>
    <string name="select_way_of_booking">Select Way Of Booking</string>
    <string name="check_availablity">To Check Availabilty of artist on your select date</string>
    <string name="live_show_booking">Live Show Booking</string>
    <string name="digital_show_booking">Digital Show Booking</string>
    <string name="proceed">Proceed</string>
    <string name="select_date_of_booking">Select Date of Booking</string>
    <string name="select_time_of_booking">Select time of booking</string>
    <string name="clear_all">Clear All</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="booking_successfull">Booking Successfull</string>
    <string name="done">Done</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="please_use_valid_old_password">Please use valid old password</string>
    <string name="get_started">Get Started</string>
    <string name="status">Status:- </string>
    <string name="follorwer">Follower</string>
    <string name="following">Following</string>
    <string name="see_full_detail">See full details</string>
    <string name="title_activity_search_activitiy">SearchActivitiy</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="filter">Filter</string>
    <string name="click_to_choose_category">Click to choose category</string>
    <string name="pick_date">Pick date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sort_by">Sort By</string>
    <string name="close">Close</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="price_high_to_low">Price High To Low</string>
    <string name="apply_search">Apply Search</string>
    <string name="messages">Messages</string>
    <string name="no_artists_found">No Artists Found</string>
    <string name="notifications">Notifications</string>
    <string name="turn_on_of_floating_notification">Turn On/Off floating Notification</string>
    <string name="default_notification_channel_id">channel-1</string>
    <string name="channel_name">channel-1</string>
    <string name="channel_description">Notification</string>
    <string name="settings">Settings</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="type_your_message">Type your message</string>
    <string name="are_you_sure_want_to_logout">Are you sure you want to logout</string>
    <string name="pay_now">Pay Now</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="go_to_Home">Go To Home</string>
    <string name="artist_will_be_reach_at_your_location">Artist Will be Reach at your location soon.</string>
    <string name="did_artist_reach_at_yout_location">Did artist reach at your location?</string>
    <string name="your_artist_start_to_perform">Your artist is start to perform!</string>
    <string name="your_artist_complete_his_performance">You artist completed his performance</string>
    <string name="add_another_card">Add Another Card</string>
    <string name="other_payment_methods">Other Payment Methods</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="choose_your_favourable_method_of_payment">Choose your favourable method of payment</string>
    <string name="ideal">iDeal</string>
    <string name="checkout">Checkout</string>
    <string name="pleasewait">Please wait</string>
    <string name="updating_your_profile">Updating Your Profile</string>
    <string name="do_not_press_or_go_back">Do not Press or Go Back.</string>
    <string name="are_yout_sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_otp">Your OTP is: 1191 Share your otp with your artist</string>
    <string name="your_otp_is">Your OTP is: </string>
    <string name="share_yout_opt_with">Share Your OTP with \n your artist</string>
    <string name="report_artist">Report Artist</string>
    <string name="enter_description">Write description here....</string>
    <string name="submit">Submit</string>
    <string name="artist_not_available_on_this_date">Artist is not available on this date. Please Choose another date</string>
    <string name="password_should_atleast_eight_character">Password should atleast 8 character</string>
    <string name="do_yout_want_to_logout">Do you want to logout?</string>
    <string name="profile">Profile</string>
    <string name="please_choose_type_of_booking">Please choose type of booking</string>
    <string name="you_may_select_multiple_slot">You may select multiple slot in a row</string>
    <string name="do_you_want_to_save_your_profile">Do you want to save your profile?</string>
    <string name="review">Review</string>
    <string name="booking_date">Booking Date</string>
    <string name="location">Location</string>
    <string name="payment">Payment</string>
    <string name="live">live</string>
    <string name="Live">Live</string>
    <string name="pending">pending</string>
    <string name="not_paid">Not Paid</string>
    <string name="accepted">accepted</string>
    <string name="rejected">rejected</string>
    <string name="confirm">Confirm</string>
    <string name="confirmed">confirmed</string>
    <string name="paid">Paid: </string>
    <string name="processing">processing</string>
    <string name="Processing">Processing</string>
    <string name="complete">complete</string>
    <string name="completed">completed</string>
    <string name="Completed">Completed</string>
    <string name="reason">Reason:</string>
    <string name="Reason">Reason: </string>
    <string name="report">report</string>
    <string name="Report">Report</string>
</resources>