<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.paymentfragment.PaymentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/backpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_keyboard_arrow_left_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/back"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/choosePaymentMethodTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_payment_method"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/backpress"
            android:layout_marginTop="@dimen/_20sdp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/favourableMethodTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_favourable_method_of_payment"
            app:layout_constraintTop_toBottomOf="@id/choosePaymentMethodTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardListRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/favourableMethodTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addCardBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/add_another_card"
            app:layout_constraintTop_toBottomOf="@+id/cardListRecycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="@dimen/_1sdp"
            app:cornerRadius="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/otherPaymentModeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_payment_methods"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/addCardBtn"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@id/addCardBtn"
            android:textSize="@dimen/_10sdp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/idealPaymentTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@+id/otherPaymentModeTxt"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/round_pink"
            android:paddingHorizontal="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:text="@string/ideal"
            android:paddingStart="@dimen/_50sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ideal_icon"
            app:layout_constraintStart_toStartOf="@+id/idealPaymentTxt"
            app:layout_constraintTop_toTopOf="@+id/idealPaymentTxt"
            app:layout_constraintBottom_toBottomOf="@+id/idealPaymentTxt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkoutBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/checkout"
            app:layout_constraintTop_toBottomOf="@+id/idealPaymentTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:cornerRadius="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
    <include layout="@layout/loader_layout"
        android:id="@+id/loaderLayout"
        android:visibility="gone"/>
</FrameLayout>
</layout>