<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.wayofbookingfragment.WayOfBookingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_24"/>
                <TextView
                    android:id="@+id/txt_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/backArrow"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="@id/backArrow"
                    app:layout_constraintBottom_toBottomOf="@id/backArrow"
                    android:textSize="@dimen/_15sdp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selectWayBookingTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_way_of_booking"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/toCheckAvailabilityTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_availablity"
            app:layout_constraintTop_toBottomOf="@+id/selectWayBookingTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioLive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_show_booking"
                android:textSize="@dimen/_14sdp"
                android:paddingHorizontal="@dimen/_20sdp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:background="@drawable/dotted_view_line"
                android:layout_marginTop="@dimen/_10sdp"/>

            <RadioButton
                android:id="@+id/radioDigital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digital_show_booking"
                android:textSize="@dimen/_14sdp"
                android:paddingHorizontal="@dimen/_20sdp"/>

        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceedBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/_20sdp"
            app:backgroundTint="@color/white"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/colorPrimary"
            app:cornerRadius="@dimen/_10sdp"
            android:text="@string/proceed"
            android:textColor="@color/colorPrimary"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>
</layout>