<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginContainer"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:src="@drawable/forget_bg"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Login">

        <ImageView
            android:id="@+id/img_sign"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/splash_logo_updated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:text="@string/welcome"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_sign" />

        <TextView
            android:id="@+id/txt_contine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textSize="15sp"
            android:textColor="#949494"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="@id/welcomeTxt"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/boxcardview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_contine">

            <ImageView
                android:id="@+id/mailicon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_address"
                android:textColor="#66667e"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                app:layout_constraintStart_toEndOf="@id/mailicon"
                app:layout_constraintTop_toTopOf="@+id/mailicon" />

            <EditText
                android:id="@+id/emailedt"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:background="@null"
                android:hint="@string/type_here"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="#c1c1c1"
                android:fontFamily="@font/montserrat_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mailicon"
                app:layout_constraintTop_toBottomOf="@+id/txt_mail" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/boxcardview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLayout">

            <ImageView
                android:id="@+id/passicon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/_10sdp"
                android:textColor="#66667e"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintStart_toEndOf="@id/passicon"
                app:layout_constraintTop_toTopOf="@+id/passicon" />

            <EditText
                android:id="@+id/passwordEdt"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:background="@null"
                android:hint="@string/type_here"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="#c1c1c1"
                android:fontFamily="@font/montserrat_regular"
                android:imeOptions="actionDone"
                app:layout_constraintEnd_toStartOf="@+id/eye"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/passicon"
                app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

            <ImageView
                android:id="@+id/eye"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/passwordLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/passwordLayout"
                android:src="@drawable/eye_icon"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/remember_me"
            android:textColor="#66667e"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />


        <TextView
            android:id="@+id/forgetTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/quicksand_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkbox"
            app:layout_constraintBottom_toBottomOf="@+id/checkbox"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:cornerRadius="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/forgetTxt" />

        <TextView
            android:id="@+id/accountYetTxt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/yet"
            android:textColor="@color/grey_Dark_color"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

        <include layout="@layout/loader_layout"
            android:id="@+id/loaderLayout"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>